# Enso-Atlas

./: .gitignore  CONTRIBUTING.md  Dockerfile.embed  Dockerfile.pathfound  Dockerfile.tf  LICENSE  Makefile  NOTICE  README.md  TECHNICAL_SPECIFICATION.md  docs.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
config/: default.yaml  projects.yaml
data/: labels.csv  slide_metadata.json
docker/: Dockerfile  docker-compose.yaml
docs/: COMPREHENSIVE_TECHNICAL_DOCUMENTATION.md  DATASETS.md  KAGGLE_SUBMISSION.md  SUBMISSION_CHECKLIST.md  SUBMISSION_WRITEUP.md  VIDEO_SCRIPT.md  reproduce.md  technical-writeup-draft.md  technical_writeup.md
frontend/: .env.example  INTEGRATION_TEST_RESULTS.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
reports/: modularity-endpoint-audit.md
scripts/: batch_reembed_level0.py  brca_runpod_pipeline.py  create_demo_data.py  create_gdc_thumbnails.py  create_matched_labels.py  create_recurrence_labels.py  download_dataset.py  download_models.py  download_ovarian.py  download_ovarian_fixed.py  embed_level0_pipelined.py  evaluate_model.py  evaluate_transmil.py  generate_demo_data.py  generate_embeddings.py  generate_embeddings_batch.py  generate_embeddings_dinov2.py  generate_embeddings_pathfound.py  luad_runpod_pipeline.py  match_slides_to_labels.py  multi_model_inference.py  prepare_embeddings.py  prepare_ovarian_data.py  recover_missing_coords.py  reembed_medsiglip_level1.py  setup_brca_project.py  setup_luad_project.py  start.sh  train_bevacizumab.py  train_clam_alternatives.py  train_clam_production.py  train_transmil_finetune.py  validate_project_modularity.py  validate_project_scoping.py
submission/: WRITEUP.md  enso-atlas-kaggle-notebook.ipynb
tests/: test_api_comprehensive.py  (+17 more)
(+156 files in other folders)
